namespace MadnessDelivery.GameLogic;

public enum Level
{
    FACILE,
    MOYEN,
    DIFFICILE,
}