namespace MadnessDelivery.GameLogic;

public enum TypeRoute
{
    DROITE,
    VIRAGE,
    PASSAGEPIETON,
    GIRATOIRE,
    DIRECTION3
}